Include Scott Talk
Include Scott Talk

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -29,6 +29,7 @@ import ToddLibby from "../components/SpeakerImages/ToddLibby";
 import ToriBrenneison from "../components/SpeakerImages/ToriBrenneison";
 import Vitaliy from "../components/SpeakerImages/Vitaliy";
 import BrandonR from "../components/SpeakerImages/BrandonR";
+import ScottStroz from "../components/SpeakerImages/ScottStroz";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -54,6 +55,7 @@ import { Link as ButtonLink } from "../components/Button";
 <Speaker name="Russell Skaggs" Image={RussellSkaggs} twitter="russellskaggs" linkedin="russellskaggs"/>
 <Speaker name="Ramón Huidobro" Image={ramonhuidobroImage} twitter="hola_soy_milk" linkedin="ramonhuidobro"  />
 <Speaker name="Sarah Dutkiewicz" Image={SarahDutkiewicz} twitter="sadukie" linkedin="sadukie"/>
+<Speaker name="Scott Stroz" Image={ScottStroz} twitter="boyzoid" linkedin="boyzoid"/>
 <Speaker name="Sean Lawrenz" Image={SeanLawrenz} twitter="Seanlaw27" linkedin="seanlawrenz"/>
 <Speaker name="Tori Brenneison" Image={ToriBrenneison} twitter="not_unambitious" linkedin="toribrenneison"/>
 <Speaker name="Todd Libby" Image={ToddLibby} twitter="toddlibby" linkedin="todd-libby"/>
